samples/_failures_safe/1761367452_6e252a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dd4cf060.c: In function ‘main’:
./samples/SAFE/__tmp_dd4cf060.c:159:5: error: ‘print_word’ undeclared (first use in this function)
  159 |     print_word
      |     ^~~~~~~~~~
./samples/SAFE/__tmp_dd4cf060.c:159:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_dd4cf060.c:159:15: error: expected ‘;’ at end of input
  159 |     print_word
      |               ^
      |               ;
./samples/SAFE/__tmp_dd4cf060.c:159:5: error: expected declaration or statement at end of input
  159 |     print_word
      |     ^~~~~~~~~~
